Unwrap array dimensions before the specialized return type's export check